# otus_lab2

./: CMakeLists.txt  README.md  filterFunctions.h  filters.h  main.cpp  processing.h  tests.cc  tie.cpp
.github/workflows/: release.yml
